--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,4 +3,9 @@ Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mypy==0.782
+mypy-extensions==0.4.3
+python-dotenv==0.14.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
 Werkzeug==1.0.1
