--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -13,5 +13,6 @@ pyflakes==2.2.0
 python-dotenv==0.14.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
+Unidecode==1.1.1
 Werkzeug==1.0.1
 zipp==3.1.0
