--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ mypy==0.782
 mypy-extensions==0.4.3
 pycodestyle==2.6.0
 pyflakes==2.2.0
+python-dotenv==0.14.0
 pytz==2020.1
 sqlparse==0.3.1
 typed-ast==1.4.1
