--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,10 @@
     "react-sortable-hoc": "^1.11.0"
   },
   "scripts": {
-    "init-api": "./scripts/init_api.sh",
-    "build-db": "./scripts/build_db.sh",
     "start": "react-scripts start",
-    "start-api": "cd api && ./.env/bin/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "./scripts/lint.sh",
-    "eject": "react-scripts eject",
-    "deploy": "./scripts/deploy.sh"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "plugins": [
