--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "material-table": "^1.69.0",
+    "material-table": "^1.69.1",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-sortable-hoc": "^1.11.0"
+    "react-sortable-hoc": "^1.11.0",
+    "react-table": "^7.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
