--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,18 @@
-asgiref==3.2.10
-Django==3.1.2
-django-extensions==3.0.9
-djangorestframework==3.12.1
-flake8==3.8.3
-importlib-metadata==2.0.0
+asgiref==3.4.1
+Django==3.2.5
+django-extensions==3.1.3
+djangorestframework==3.12.4
+flake8==3.9.2
+importlib-metadata==4.6.1
 mccabe==0.6.1
-mypy==0.782
+mypy==0.910
 mypy-extensions==0.4.3
-pycodestyle==2.6.0
-pyflakes==2.2.0
-python-dotenv==0.14.0
-pytz==2020.1
-sqlparse==0.3.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-zipp==3.2.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+python-dotenv==0.18.0
+pytz==2021.1
+sqlparse==0.4.1
+toml==0.10.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+zipp==3.5.0
